--- a/src/content/blog/deploying-next-apps.mdx
+++ b/src/content/blog/deploying-next-apps.mdx
@@ -2,7 +2,9 @@
 title: Deploying Next.js Apps
 description: How to deploy your Next.js apps on Vercel.
 image: /images/blog/blog-post-3.jpg
-date: "2024-04-10"
+date: "2023-01-02"
+authors:
+  - rambda
 ---
 
 <Callout>
@@ -123,7 +125,7 @@ module.exports = {
   },
   variants: {},
   plugins: [],
-};
+}
 ```
 
 Hopefully that looks good enough to you.
