--- a/src/content/blog/dynamic-routing-static-regeneration.mdx
+++ b/src/content/blog/dynamic-routing-static-regeneration.mdx
@@ -3,6 +3,8 @@ title: Dynamic Routing and Static Regeneration
 description: How to use incremental static regeneration using dynamic routes.
 image: /images/blog/blog-post-2.jpg
 date: "2023-03-04"
+authors:
+  - rambda
 ---
 
 <Callout>
