--- a/src/content/blog/server-client-components.mdx
+++ b/src/content/blog/server-client-components.mdx
@@ -3,6 +3,8 @@ title: Server and Client Components
 description: React Server Components allow developers to build applications that span the server and client.
 image: /images/blog/blog-post-4.jpg
 date: "2023-01-08"
+authors:
+  - rambda
 ---
 
 <Callout>
